--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   rxdart: ^0.22.1+1
   dio: ^2.1.13
   shared_preferences: ^0.5.3+4
+#  fancy_bottom_navigation: ^0.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
