--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dio: ^2.1.13
   shared_preferences: ^0.5.3+4
   fancy_bottom_navigation: ^0.3.2
+  grouped_buttons: ^1.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
