finished colleague's order

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/svgs/demo_logo.jpg
+    - assets/chips.png
+    - assets/cookie.png
+    - assets/spag.png
+    - assets/potatoes.png
+    - assets/background_light.png
+    - assets/bg.jpg
+    - assets/bg2.jpg
+    - assets/bg3.jpg
+    - assets/bg4.jpg
+    - assets/bg6.jpg
 
 
 
