--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,11 @@ dependencies:
   flutter:
     sdk: flutter
   rxdart: ^0.22.1+1
-  dio: ^2.1.13
+  dio: ^2.1.16
   shared_preferences: ^0.5.3+4
   fancy_bottom_navigation: ^0.3.2
   grouped_buttons: ^1.0.4
+  flutter_slidable: ^0.5.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -52,6 +53,7 @@ flutter:
     - assets/cookie.png
     - assets/spag.png
     - assets/potatoes.png
+    - assets/bdjobs_logo_img.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
