--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rxdart: ^0.22.1+1
+  rxdart: ^0.22.2
   dio: ^2.1.16
   shared_preferences: ^0.5.3+4
   fancy_bottom_navigation: ^0.3.2
   grouped_buttons: ^1.0.4
   flutter_slidable: ^0.5.3
+  connectivity: 0.4.3+7
 
 
   # The following adds the Cupertino Icons font to your application.
