--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.2+1
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "assets/cupcake.png"
+  image_path_android: "assets/cupcake.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -55,6 +62,7 @@ flutter:
     - assets/spag.png
     - assets/potatoes.png
     - assets/bdjobs_logo_img.png
+    - assets/cupcake.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
